# Fallout-4-VR-Body

./: .clang-format  .clang-format-ignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BSFlattenedBoneTree.cpp  BSFlattenedBoneTree.h  BSTSmartPointer.h  BoneSpheresHandler.h  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  Changelog.md  Config.cpp  Config.h  ConfigurationMode.cpp  ConfigurationMode.h  Credits.md  CullGeometryHandler.cpp  CullGeometryHandler.h  Debug.h  Development.md  F4VRBody.cpp  F4VRBody.h  FAQ.md  Fallout4VR_Body.sln  Fallout4VR_Body.vcxproj  Fallout4VR_Body.vcxproj.filters  Features-Backlog.md  GunReload.cpp  GunReload.h  HandPose.cpp  HandPose.h  Home.md  Installation.md  (+47 more)
.claude/: settings.json
.github/workflows/: build.yml  maintenance.yml
api/: VRHookAPI.h  VRManagerAPI.h
cmake/: FindOpenVR.cmake  common.cmake  headerlist.cmake  package.cmake  packaging.cmake  resources.rc.in  sourcelist.cmake  version.rc.in
configs/: FRIK.ini  Pipe Bolt-Action.json  pipe.json
data/: FRIK.ini  mesh_hide_face.ini  mesh_hide_skins.ini  mesh_hide_slots.ini  pipboy_screen_offsets.json
data/config/: FRIK.ini  file_names.txt  pipboy_attaboy_offsets.json  pipboy_holo_offsets.json  pipboy_screen_offsets.json
data/config/weapons_offsets/: .44-PowerArmor.json  .44-leftHanded.json  .44.json  10mm-PowerArmor.json  10mm-leftHanded.json  10mm.json  Alien Blaster-PowerArmor.json  Alien Blaster.json  AmmoFlareSignal$-throwable.json  Assault Rifle-PowerArmor.json  Assault Rifle-leftHanded.json  Assault Rifle-offHand.json  Assault Rifle.json  Baseball Bat-PowerArmor.json  Baseball Bat.json  BaseballGrenade$-throwable-PowerArmor.json  (+204 more)
data/mod/: FRIK.esp  README.txt
data/visual/: README.txt  ui_btn_1x1.nif  ui_btn_1x2.nif  ui_btn_1x3.nif  ui_btn_1x4.nif  ui_btn_1x5.nif  ui_btn_2x1.nif  ui_btn_2x2.nif  ui_btn_2x3.nif  ui_btn_2x4.nif  ui_btn_2x5.nif  ui_btn_3x1.nif  ui_btn_3x2.nif  ui_btn_3x3.nif  ui_btn_3x4.nif  ui_btn_3x5.nif  ui_common_btn_border.nif  ui_common_btn_border_2.nif  ui_common_btn_exit.nif  ui_common_btn_reset.nif  ui_common_btn_save.nif  ui_dev_library.DDS  ui_msg_1x1.nif  ui_msg_1x2.nif  ui_msg_2x1.nif  ui_msg_2x2.nif  ui_msg_3x1.nif  ui_msg_3x2.nif  ui_msg_3x3.nif  ui_msg_4x1.nif  ui_msg_4x2.nif  ui_msg_5x1.nif  ui_msg_5x2.nif  ui_msg_6x1.nif  ui_msg_6x2.nif  ui_title_1.nif  ui_title_2.nif
default_inis/FRIK_Mesh_Hide/: face.ini
docs/: README.md  changelog.md  development-pipboy-controls.md  development.md  f4sevr-to-commonlib-migration-CHANGES.md  faq.md  features-backlog.md  frik-api.md  in-game-configuration-guide.md  installation.md  screenshots-videos.md  weapon-adjustment-guide.md
include/: SimpleIni.h  version.h
lib/: common_vc11.lib  f4se_common.lib  f4se_loader_common.lib
lib_debug/: common_vc11.lib  f4se_common.lib  f4se_loader_common.lib
libs/debug/: common_vc11.lib  f4se_common.lib
libs/release/: f4se_common.lib
src/: BSFlattenedBoneTree.cpp  BSFlattenedBoneTree.h  BSTSmartPointer.h  BoneSpheresHandler.cpp  BoneSpheresHandler.h  CMakeLists.txt  Config.cpp  Config.h  ConfigurationMode.cpp  ConfigurationMode.h  CullGeometryHandler.cpp  CullGeometryHandler.h  Debug.cpp  Debug.h  F4VRBody.cpp  F4VRBody.h  FRIK.cpp  FRIK.h  GameHooks.cpp  GameHooks.h  GunReload.cpp  GunReload.h  HandPose.cpp  HandPose.h  Menu.cpp  Menu.h  MenuChecker.cpp  MenuChecker.h  MiscStructs.cpp  MiscStructs.h  MuzzleFlash.h  NiCloneProcess.h  Offsets.cpp  Offsets.h  PCH.cpp  PCH.h  PapyrusApi.h  PapyrusGateway.h  Pipboy.cpp  Pipboy.h  (+30 more)
src/api/: FRIKApi.cpp  FRIKApi.h  OpenVRTypes.h  PapyrusVRAPI.h  PapyrusVRTypes.h  VRHookAPI.h  VRManagerAPI.h  openvr.h  openvr_driver.h
src/common/: BSTSmartPointer.h  CommonUtils.cpp  CommonUtils.h  ConfigBase.h  Logger.h  Matrix.cpp  Matrix.h  MatrixUtils.cpp  MatrixUtils.h  Quaternion.cpp  Quaternion.h
src/config-mode/: BodyAdjustmentSubConfigMode.cpp  BodyAdjustmentSubConfigMode.h  ConfigurationMode.cpp  ConfigurationMode.h  MainConfigMode.cpp  MainConfigMode.h  PipboyConfigMode.cpp  PipboyConfigMode.h
src/f4sevr/: Common.h  Forms.h  Nodes.h  PapyrusArgs.cpp  PapyrusArgs.h  PapyrusInterfaces.h  PapyrusNativeFunctionDef.inl  PapyrusNativeFunctionDef_Base.inl  PapyrusNativeFunctions.h  PapyrusStruct.cpp  PapyrusStruct.h  PapyrusUtils.h  PapyrusVM.h  PapyrusValue.cpp  PapyrusValue.h  VM.h
src/f4vr/: BSFlattenedBoneTree.h  F4SEVRStructs.h  F4VROffsets.h  F4VRPapyrusGateway.h  F4VRUtils.cpp  F4VRUtils.h  GameMenusHandler.h  MiscStructs.cpp  MiscStructs.h  NiCloneProcess.h  Offsets.h  PapyrusGatewayBase.h  PlayerNodes.h  ScaleformUtils.cpp  ScaleformUtils.h  VR.cpp  VR.h  VRControllersManager.h
src/include/: FileWatch.hpp  SimpleIni.h  json.hpp
src/pipboy/: Flashlight.cpp  Flashlight.h  Pipboy.cpp  Pipboy.h  PipboyOperationHandler.cpp  PipboyPhysicalHandler.cpp  PipboyPhysicalHandler.h
src/reload/: GunReload.cpp
src/res/: resource.h  resource.rc
src/skeleton/: BoneSpheresHandler.cpp  BoneSpheresHandler.h  CullGeometryHandler.cpp  CullGeometryHandler.h  HandPose.cpp  HandPose.h  HandPoseData.cpp  HandPoseData.h  SelfieHandler.cpp  SelfieHandler.h  Skeleton.cpp  Skeleton.h
src/smooth-movement/: SmoothMovementVR.cpp  SmoothMovementVR.h
src/ui/: UIButton.cpp  UIButton.h  UIContainer.cpp  UIContainer.h  UIDebugWidget.cpp  UIDebugWidget.h  UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h  UIModAdapter.h  UIToggleButton.cpp  UIToggleButton.h  UIToggleGroupContainer.cpp  UIToggleGroupContainer.h  UIUtils.cpp  UIUtils.h  UIWidget.cpp  UIWidget.h
src/weapon-position/: WeaponPositionAdjuster.cpp  WeaponPositionAdjuster.h  WeaponPositionConfigMode.cpp  WeaponPositionConfigMode.h
ui/: IUIModAdapter.cpp  IUIModAdapter.h  UIButton.cpp  UIButton.h  UIContainer.cpp  UIContainer.h  UIDebugWidget.cpp  UIDebugWidget.h  UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h  UIModAdapter.h  UIToggleButton.cpp  UIToggleButton.h  UIToggleGroupContainer.cpp  UIToggleGroupContainer.h  UIUtils.cpp  UIUtils.h  UIWidget.cpp  UIWidget.h
(+227 files in other folders)
